# juln-ai-model

./: .env  .gitignore  README.md  pyproject.toml
src/ai-model/: __main__.py
